<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/default_document_item_padding_end">

    <com.anytypeio.anytype.core_ui.widgets.text.TextInputWidget
        android:id="@+id/headerThree"
        style="@style/BlockHeaderThreeContentStyle"
        tools:text="Header 3" />

</FrameLayout>